WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96807
IndexedDB: Calling close() during upgradeneeded handler should fire error at open request
https://bugs.webkit.org/show_bug.cgi?id=96807
Summary
IndexedDB: Calling close() during upgradeneeded handler should fire error at ...
Joshua Bell
Reported
2012-09-14 10:53:50 PDT
IndexedDB: Calling close() during upgradeneeded handler should fire error at open request
Attachments
Patch
(8.44 KB, patch)
2012-09-14 10:58 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.44 KB, patch)
2012-09-14 15:34 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-09-14 10:58:53 PDT
Created
attachment 164192
[details]
Patch
Joshua Bell
Comment 2
2012-09-14 10:59:31 PDT
This is one of the pieces factored out of
http://webkit.org/b/90411
dgrogan@ - can you take a look?
David Grogan
Comment 3
2012-09-14 14:04:13 PDT
Comment on
attachment 164192
[details]
Patch LGTM
Joshua Bell
Comment 4
2012-09-14 14:49:28 PDT
tony@ - they just keep coming! r?
Tony Chang
Comment 5
2012-09-14 14:55:52 PDT
Comment on
attachment 164192
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164192&action=review
> Source/WebCore/Modules/indexeddb/IDBOpenDBRequest.cpp:109 > + // If connection closed between onUpgradeNeeded and onSuccess, an error
Nit: If /the/ connection
Joshua Bell
Comment 6
2012-09-14 15:34:49 PDT
Created
attachment 164239
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-09-14 17:08:20 PDT
Comment on
attachment 164239
[details]
Patch for landing Clearing flags on attachment: 164239 Committed
r128674
: <
http://trac.webkit.org/changeset/128674
>
WebKit Review Bot
Comment 8
2012-09-14 17:08:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug