Source/WebCore/Modules/indexeddb/IDBDatabase.h
@@ -88,6 +88,7 @@ public:
     virtual const AtomicString& interfaceName() const;
     virtual ScriptExecutionContext* scriptExecutionContext() const;
 
+    bool isClosePending() const { return m_closePending; }
     void forceClose();
     const IDBDatabaseMetadata metadata() const { return m_metadata; }
     void enqueueEvent(PassRefPtr<Event>);
