Source/WebCore/Modules/indexeddb/IDBOpenDBRequest.cpp
@@ -105,6 +105,15 @@ void IDBOpenDBRequest::onSuccess(PassRefPtr<IDBDatabaseBackendInterface> backend
         idbDatabase = m_result->idbDatabase();
         ASSERT(idbDatabase);
         ASSERT(!m_databaseCallbacks);
+
+        // If the connection closed between onUpgradeNeeded and onSuccess, an error
+        // should be fired instead of success. The back-end may not be aware of
+        // the closing state if the events are asynchronously delivered.
+        if (idbDatabase->isClosePending()) {
+            m_result.clear();
+            onError(IDBDatabaseError::create(IDBDatabaseException::IDB_ABORT_ERR, "The connection was closed."));
+            return;
+        }
     } else {
         ASSERT(m_databaseCallbacks);
         idbDatabase = IDBDatabase::create(scriptExecutionContext(), backend, m_databaseCallbacks);
